[153] Forbid composite usages inside PortDefinition/PortUsage
Bug: https://github.com/eclipse-syson/syson/issues/153
Signed-off-by: Axel RICHARD <axel.richard@obeo.fr>